# rsfmt

./: Cargo.toml  README.md
src/: ast.rs  formatter.rs  ir.rs  main.rs  rsfmt.rs  translator.rs  typesetter.rs
tests/: rt.sh
tests/ast/attrs/: attr.rs  attr.rsfmt  attr.rsp  derive.rsfmt  derive.rsp  doc.rsfmt  doc.rsp  doc_comment.rsfmt  doc_comment.rsp  inner.rsfmt  inner.rsp  long_doc.rsfmt  meta.rs  meta.rsfmt  meta.rsp  meta_list.rs  meta_list.rsfmt  meta_list.rsp  meta_list_idents.rsp  meta_list_name_value_str.rsfmt  meta_list_paths.rsfmt  meta_name_value_str.rsfmt  meta_path.rsfmt  outer.rsfmt  outer.rsp  sugared_doc.rs  sugared_doc.rsfmt  sugared_doc.rsp  tool_attr.rsfmt  tool_attr.rsp
tests/ast/comments/: comment.rs  comment.rsfmt  comment.rsp
tests/ast/crate/: crate.rs  crate.rsfmt  crate.rsp
tests/ast/exprs/: array.rsfmt  array.rsp  assign.rs  assign.rsfmt  async.rs  async.rsp  await.rsp  block.rsfmt  block.rsp  box.rsfmt  box.rsp  break.rsfmt  break.rsp  cast.rsp  closure.rsfmt  closure.rsp  const.rsfmt  const_block.rs  const_block.rsp  continue.rsfmt  continue.rsp  err.rs  err.rsfmt  err.rsp  field.rsp  fn_call.rsfmt  for.rsp  (+55 more)
tests/rustfmt/: 3267.rs  3267.rsfmt  3267.rsp  3547.rs  3547.rsfmt  3547.rsp  3560.rsfmt  3560.rsp  3591.rsfmt  3591.rsp  3626.rs  3626.rsfmt  3626.rsp  3697.rs  3697.rsfmt  3697.rsp  3716.rsfmt  3716.rsp  3943.rs  3943.rsfmt  3943.rsp  3961.rs  3961.rsfmt  3961.rsp  4050.rs  4050.rsfmt  4050.rsp  4082.rs  4082.rsfmt  4082.rsp  4118.rs  4118.rsfmt  4118.rsp  4351.rs  4351.rsfmt  4351.rsp  4375.rs  4375.rsfmt  4375.rsp  4462.rs  (+73 more)
(+248 files in other folders)
