[package]
name = "rsfmt"
version = "1.60.0"
rust-version = "1.60"
edition = "2021"

authors = ["baitu <zbaitu@gmail.com>"]
homepage = "https://github.com/zBaitu/rsfmt"
repository = "https://github.com/zBaitu/rsfmt"
description = "Yet another rust source code formatter"
keywords = ["formatter"]
readme = "README.md"
license = "MIT OR Apache-2.0"


[[bin]]
name = "rsfmt"


[dependencies]
structopt = "0.3"
walkdir = "2"

rustc-ap-rustc_ast = "727.0.0"
rustc-ap-rustc_data_structures = "727.0.0"
rustc-ap-rustc_parse = "727.0.0"
rustc-ap-rustc_session = "727.0.0"
rustc-ap-rustc_span = "727.0.0"
rustc-ap-rustc_target = "727.0.0"
